<resources>
    <string name="app_name">Digital World</string>
    <string name="txt_user">User</string>
    <string name="txt_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_logged">You are logged in</string>
    <string name="txt_login_error">Login error</string>
    <string name="txt_password_error">Password error</string>
    <string name="txt_login_wrong">Wrong email or password</string>
    <string name="txt_first_name">First Name</string>
    <string name="etxt_first_name">You first name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="etxt_last_name">You last name</string>
    <string name="txt_email">Email</string>
    <string name="etxt_email">You email</string>
    <string name="etxt_password_sign_up">You password</string>
    <string name="txt_terms">Terms of service</string>
    <string name="txt_user_registration">Create Account</string>
    <string name="txt_valid_password">Valid Password</string>
    <string name="txt_invalid_password">Invalid Password</string>
    <string name="txt_terms_title">Terms and Conditions Policy</string>
    <string name="menu_home">Home</string>
    <string name="menu_product">Products</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_shopping_cart">Shopping Cart</string>
    <string name="menu_logout">Log Out</string>
    <string name="txt_product_name">Product</string>
    <string name="txt_product_name_hint">Product name</string>
    <string name="txt_product_category">Category</string>
    <string name="txt_product_category_hint">Product category</string>
    <string name="txt_product_value">Value</string>
    <string name="txt_product_value_hint">Product value</string>
    <string name="txt_product_image">Image</string>
    <string name="txt_product_image_hint">Type the url of your product photo</string>
    <string name="txt_btn_add_product">Add Product</string>
    <string name="txt_name_row">Name</string>
    <string name="txt_category_row">Category</string>
    <string name="txt_value_row">Value</string>
    <string name="txt_favorites">Favorites</string>
    <string name="txt_shopping_cart">Shopping Cart</string>
</resources>