<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    tools:context=".SignUpActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_name"
        android:layout_marginTop="10dp"
        style="@style/MyTextView"/>

    <EditText
        android:id="@+id/edt_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"
        android:hint="@string/txt_product_name_hint"
        style="@style/MyEditText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_category"
        style="@style/MyTextView"/>

    <EditText
        android:id="@+id/edt_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"
        android:hint="@string/txt_product_category_hint"
        style="@style/MyEditText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_value"
        style="@style/MyTextView"/>

    <EditText
        android:id="@+id/edt_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/txt_product_value_hint"
        style="@style/MyEditText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_product_image"
        style="@style/MyTextView"/>

    <EditText
        android:id="@+id/edt_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:hint="@string/txt_product_image_hint"
        style="@style/MyEditText" />

    <Button
        android:id="@+id/btn_add_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_btn_add_product"/>

</LinearLayout>