<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_menu_products"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_menu_add_product"
            android:title="@string/menu_product"
            android:visible="false"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites_heart"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_shopping_cart"
            android:icon="@drawable/ic_menu_shopping_cart"
            android:title="@string/menu_shopping_cart" />

    </group>

    <group android:id="@+id/logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>