<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="185dp"
        android:layout_weight="50">

        <ImageView
            android:id="@+id/imv_item_product"
            android:layout_width="155dp"
            android:layout_height="180dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:src="@drawable/digital_world">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tev_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_name_row"
            android:textStyle="bold"
            android:textSize="20dp">
        </TextView>

        <TextView
            android:id="@+id/tev_item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_category_row"
            android:textStyle="italic"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:id="@+id/tev_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_value_row"
            android:textStyle="bold"
            android:textSize="20dp">

        </TextView>

        <Button
            android:id="@+id/btn_item_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_favorites_heart"
            android:text="@string/txt_favorites">

        </Button>

        <Button
            android:id="@+id/btn_item_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_shopping_cart"
            android:text="@string/txt_shopping_cart">

        </Button>

    </LinearLayout>

</LinearLayout>