<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/digital_world"
            android:layout_weight="40"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_user"
            style="@style/MyTextView"/>

        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:drawableLeft="@drawable/ic_user_person"
            android:inputType="textEmailAddress"
            android:hint="correo@domain.com"
            android:layout_marginBottom="10dp"
            style="@style/MyEditText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_password"
            style="@style/MyTextView"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:drawableLeft="@drawable/ic_password_lock"
            android:inputType="textPassword"
            android:hint="xxxxxx"
            android:layout_marginBottom="10dp"
            style="@style/MyEditText"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_login"
            android:layout_weight="10"
            android:background="@drawable/campo_redondeado"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/txt_sign_up"
            android:layout_weight="10"
            android:background="@drawable/campo_redondeado"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>