<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="horizontal"
    android:padding="10dp"
    tools:context=".ui.favorites.FavoritesFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imv_item_product_fav"
            android:layout_width="170dp"
            android:layout_height="130dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/digital_world">
        </ImageView>

        <TextView
            android:id="@+id/tev_item_name_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_name_row"
            android:textStyle="bold"
            android:textSize="20dp">
        </TextView>

        <TextView
            android:id="@+id/tev_item_category_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_category_row"
            android:textStyle="italic"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:id="@+id/tev_item_value_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_value_row"
            android:textStyle="bold"
            android:textSize="20dp">

        </TextView>

        <Button
            android:id="@+id/btn_item_favorite_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_favorites_not_heart"
            android:text="@string/txt_favorites">

        </Button>

        <Button
            android:id="@+id/btn_item_shopping_cart_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_shopping_cart"
            android:text="@string/txt_shopping_cart">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imv_item_product"
            android:layout_width="170dp"
            android:layout_height="130dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/digital_world">
        </ImageView>

        <TextView
            android:id="@+id/tev_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_name_row"
            android:textStyle="bold"
            android:textSize="20dp">
        </TextView>

        <TextView
            android:id="@+id/tev_item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_category_row"
            android:textStyle="italic"
            android:textSize="20dp">

        </TextView>

        <TextView
            android:id="@+id/tev_item_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_value_row"
            android:textStyle="bold"
            android:textSize="20dp">

        </TextView>

        <Button
            android:id="@+id/btn_item_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_favorites_not_heart"
            android:text="@string/txt_favorites">

        </Button>

        <Button
            android:id="@+id/btn_item_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_shopping_cart"
            android:text="@string/txt_shopping_cart">

        </Button>

    </LinearLayout>

</LinearLayout>